update models and relationships

--- a/app/templates/new_track_form.html
+++ b/app/templates/new_track_form.html
@@ -7,9 +7,9 @@
 <body>
     <form action="" method="POST">
         {{ form.csrf_token }}
-        <p>{{ form.artist_name.label }} {{ form.artist_name }} </p>
         <p>{{ form.track_name.label }} {{ form.track_name }} </p>
         <p> {{ form.track_url.label }} {{ form.track_url }} </p>
+        <p> {{ form.genre_id.label }} {{ form.genre_id }} </p>
         <p> {{ form.submit }} </p>
     </form>
 </body>
